UIUX-1709,1706-calender-icon-and-alignment-issue

--- a/src/components/Pages/VantageScore/Style.css
+++ b/src/components/Pages/VantageScore/Style.css
@@ -58,7 +58,7 @@
   width: 15%;
 }
 #date {
-  margin: 10px 0px;
+  margin: 0px;
   font-size: 15px;
   font-weight: bolder;
 }
